# Dji_Project

./: README.md
ProjectDevelop/Progress/v1/: ClientPost.py  CloudThread.py
ProjectDevelop/Progress/v10/: CMakeLists.txt
ProjectDevelop/Progress/v11/: CMakeLists.txt
ProjectDevelop/Progress/v11/CurlCallback/: post.cpp  post.hpp
ProjectDevelop/Progress/v11/Formation/commander/: Commander.h  com_uav.cpp
ProjectDevelop/Progress/v11/Formation/xiong_algorithm/: Hungarian.cpp
ProjectDevelop/Progress/v11/Mobility/: Mobility.cpp
ProjectDevelop/Progress/v11/Redis/: RedisConnect.h
ProjectDevelop/Progress/v11/Scsn/: scsnDataHead.cpp  scsnDataHead.h  scsnEmulate.cpp
ProjectDevelop/Progress/v2/: CloudOsdkCon.cpp  CloudThread.py  Post.py  TCP_direct.py  api_RenYue.py  serial_inUAV_directControl.py  uav_control.doc
ProjectDevelop/Progress/v3/: CloudOsdkCon.cpp  CloudThread.py  Post.py  readme.md
ProjectDevelop/Progress/v4/: CloudOsdkCon.cpp  CloudThread.py  Post.py  post2.py
ProjectDevelop/Progress/v5/: main.cpp  readme.md
ProjectDevelop/Progress/v6/: datahead.cpp  readme.md  scsnEmulate.cpp  uavMain.cpp  uavMain.h
ProjectDevelop/Progress/v7/: Main.cpp  dataHead.h  dataPack.cpp  dataPack.h  fengPack.cpp  newHeadMain.cpp  scsnDataHead.h  scsnEmulate.cpp
ProjectDevelop/Progress/v8/: Main.cpp  Mobility.hpp  dataPack.h  scsnDataHead.h  scsnEmulate.cpp
ProjectDevelop/Progress/v9/: CMakeLists.txt
ProjectDevelop/Progress/v9/Mobility/: Mobility.cpp  Mobility.hpp
ProjectDevelop/Progress/v9/Redis/: RedisConnect.h
ProjectDevelop/Progress/v9/Scsn/: scsnEmulate.cpp
ProjectDevelop/merge_v1/flight-control/: Makefile  main.cpp  order.cpp
ProjectDevelop/merge_v2/flight-control/: CMakeLists.txt  Mobility.h  RedisConnect.h  cmake_install.cmake  dataPack.h  main.cpp  main1.TXT  order.cpp
ProjectDevelop/merge_v3/flight-control/: CMakeLists.txt  Mobility.cpp  Mobility.hpp  main.cpp  order.cpp  scsn  uav_info.json
ProjectDevelop/merge_v4/flight-control/: CMakeLists.txt  Mobility.cpp  dataPack.cpp  dataPack.h  main.cpp  order.cpp
ProjectStudy/CloudSocketcAndPython/: PostDataClient.py  ReceiveDataCloud.cpp  ReceiveDataCloud.py
ProjectStudy/DataSendProtocals/: shareQueue.cpp
ProjectStudy/FastapiAndc++/: Post.py  Receive.py  example.cpp  readme.md
ProjectStudy/FastapiShareQueue/: fastapiSharequeue.py  post.py  readme.md
ProjectStudy/FastapiTutorial/: PostDataClient.py  PydanticTutorial.py
ProjectStudy/LogStudy/easylogStudy/: CMakeLists.txt
ProjectStudy/LogStudy/easylogStudy/src/: func.cpp  func.hpp  main.cpp
ProjectStudy/LogStudy/spdlogStudy/: CMakeLists.txt
ProjectStudy/LogStudy/spdlogStudy/src/: main.cpp
ProjectStudy/OppositeCom/: CloudGetData.py  UserPostData.py  readme.md
ProjectStudy/ProcessCom/: PostFastapi.py  PostSocket.py  ReceiveSocket.cpp  readme.md
ProjectStudy/ProjectBase/: dataBaseStruct.h  datdBaseStruct.cpp  readme.md
ProjectStudy/ShareQueuec++/: dataPackege.cpp  priShareQueue.cpp  priShareQueueStruct.cpp  shareQueue.cpp
ProjectStudy/StudyC++/Basic/: RedisStruTest.cpp  StructStu.cpp
ProjectStudy/StudyThread/: Constan_exe.py  QueueStu.py  QueueStu_v1.py  ReceiveDataCloudThread.py
ProjectStudy/TwoThreadSocket/: Post.cpp  Post.py  Receive.cpp  Receive.py  TwoThread.cpp  TwoThread.py
ProjectStudy/c++Post/: Post.cpp
ProjectStudy/getMac/: postInfoOnline.py
ProjectStudy/redisRemote/: readme.md
ProjectStudy/yamlStudy/: CMakeLists.txt  readme.md
测试用例/: 8、城市云IT智能运维监控管理系统V3.3-测试用例.xls  深空路由器接口自测试细则.docx
(+21 files in other folders)
